# miniexpr

./: .gitignore  AGENTS.md  ANNOUNCE.md  CMakeLists.txt  CODE_QUALITY.md  COND-TODO.md  DSL-REDUC-TODO.md  DSL-TODO.md  LICENSE  Makefile  PERF-TODO.md  README.md  README_DEVELOPERS.md  RELEASE_NOTES.md  RELEASING.md  THIRD_PARTY_NOTICES.md  WASM32-TODO.md  check-whitespace.sh  dsl-cast-initrinsics.md  dsl-dialects.md  ir-jit-miniexpr.md  sleef-with-jit.md  test_whitespace.md  wasm32-plan.md  while-plan.md
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/bench/: CTestTestfile.cmake  Makefile  benchmark_blocksize  benchmark_blocksize_threads  benchmark_chunked  benchmark_chunksize  benchmark_comparisons  benchmark_exp  benchmark_exp_threads  benchmark_logical_bool  benchmark_memory_efficiency  benchmark_mixed_types  benchmark_mixed_types_dsl  benchmark_nd_padding  benchmark_nd_padding_dsl_threads  benchmark_nd_padding_threads  benchmark_predicate_reductions  benchmark_reductions  benchmark_reductions_threads  benchmark_sincos  benchmark_sincos_threads  benchmark_threadsafe  benchmark_transcendentals  cmake_install.cmake
_codeql_build_dir/examples/: 01_simple_expression  02_complex_expression  03_mixed_types  04_large_dataset  05_parallel_evaluation  06_debug_print  07_comparison_bool_output  08_explicit_output_dtype  09_reduction_expressions  10_boolean_logical_ops  11_dsl_kernel  12_mandelbrot  13_mandelbrot_dsl  14_string_ops  15_dsl_print  16_nd_padding_example  17_dsl_user_function  18_dsl_if_elif_else  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_chunk_sizes
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_all_types  test_auto_dtype  test_basic  test_bool_output  test_chunked_eval  test_comparison_power  test_complex_functions  test_dsl_syntax  test_dsl_udf  test_dtype_validation  test_explicit_output  test_function_order  test_inverse_hyperbolic  test_inverse_trig_aliases  test_mixed_types  test_nd  test_numpy_functions  test_operators  test_print  test_reductions  test_trig  (+5 more)
bench/: CMakeLists.txt  README.md  benchmark_accelerate.c  benchmark_all_types.c  benchmark_black-scholes.c  benchmark_blocksize.c  benchmark_blocksize_threads.c  benchmark_chunked.c  benchmark_chunksize.c  benchmark_comparisons.c  benchmark_dsl_jit_global_linear_idx.c  benchmark_dsl_jit_index_vars.c  benchmark_dsl_jit_mandelbrot.c  benchmark_dsl_jit_math_kernels.c  benchmark_exp.c  benchmark_exp_threads.c  benchmark_logical_bool.c  benchmark_mandelbrot_numba.py  benchmark_memory_efficiency.c  benchmark_mixed_types.c  benchmark_mixed_types_dsl.c  benchmark_nd_padding.c  benchmark_nd_padding_dsl_threads.c  benchmark_nd_padding_threads.c  benchmark_predicate_reductions.c  benchmark_reductions.c  benchmark_reductions_threads.c  benchmark_sincos.c  benchmark_sincos_threads.c  benchmark_threadsafe.c  benchmark_transcendentals.c  benchmark_types.c  compare_accelerate.sh
bench/__pycache__/: benchmark_mandelbrot_numba.mandelbrot_kernel-25.py313.1.nbc  benchmark_mandelbrot_numba.mandelbrot_kernel-25.py313.nbi  benchmark_mandelbrot_numba.mandelbrot_kernel-39.py313.1.nbc  benchmark_mandelbrot_numba.mandelbrot_kernel-39.py313.nbi  benchmark_mandelbrot_numba.mandelbrot_kernel-40.py313.1.nbc  benchmark_mandelbrot_numba.mandelbrot_kernel-40.py313.nbi
cmake/: MiniexprFetchDeps.cmake  MiniexprOptions.cmake  MiniexprTinyccTargets.cmake
doc/: accelerate-integration.md  chunk-processing.md  complex-expressions.md  data-types.md  dsl-semantics-unified.md  dsl-syntax.md  dsl-usage.md  get-started.md  numpy-integration.md  numpy_integration_example.py  parallel-processing.md  strings.md  type-inference.md  windows-limitations.md
examples/: 01_simple_expression.c  02_complex_expression.c  03_mixed_types.c  04_large_dataset.c  05_parallel_evaluation.c  06_debug_print.c  07_comparison_bool_output.c  08_explicit_output_dtype.c  09_reduction_expressions.c  10_boolean_logical_ops.c  11_dsl_kernel.c  12_mandelbrot.c  13_mandelbrot_dsl.c  14_string_ops.c  15_dsl_print.c  16_nd_padding_example.c  17_dsl_user_function.c  18_dsl_if_elif_else.c  19_nd_ramp_dsl.c  CMakeLists.txt  README.md  test_chunk_sizes.c
plans/: architecture-notes.md  dsl-index-vars.md  external-js-glue-blosc2.md  external-js-glue.md  simplify-codebase.md  sleef-with-jit.md  tcc-friendly-codegen.md  wasm32-todo.md
scripts/: copy_first_existing.cmake  install-hooks.sh  pre-commit
src/: dsl_compile.c  dsl_compile_internal.h  dsl_compile_support.c  dsl_config.h  dsl_eval.c  dsl_eval_internal.h  dsl_jit_backend_cc.c  dsl_jit_backend_libtcc.c  dsl_jit_backend_wasm32.c  dsl_jit_bridge_contract.h  dsl_jit_cgen.c  dsl_jit_cgen.h  dsl_jit_ir.c  dsl_jit_ir.h  dsl_jit_runtime_cache.c  dsl_jit_runtime_host.c  dsl_jit_runtime_host.h  dsl_jit_runtime_internal.h  dsl_jit_runtime_nonhost.c  dsl_jit_runtime_nonhost.h  dsl_jit_test.h  dsl_parser.c  dsl_parser.h  functions-simd.c  functions-simd.h  functions.c  functions.h  me_complex.h  me_jit_glue.js  minctest.h  miniexpr.c  miniexpr.h  miniexpr_accelerate.h  miniexpr_eval_dsl_nd.c  miniexpr_eval_nd.c  miniexpr_eval_reduce.c  miniexpr_internal.h  miniexpr_numpy.h  sleef-config.h
tests/: CMakeLists.txt  jit_kernel_stub.c  test_all_types.c  test_auto_dtype.c  test_basic.c  test_bool_output.c  test_bytecode.c  test_chunked_eval.c  test_comparison_power.c  test_complex_functions.c  test_dsl_jit_codegen.c  test_dsl_jit_ir.c  test_dsl_jit_runtime_cache.c  test_dsl_jit_side_module.c  test_dsl_syntax.c  test_dsl_udf.c  test_dtype_mismatch_math.c  test_dtype_validation.c  test_explicit_output.c  test_function_order.c  test_integral_output.c  test_inverse_hyperbolic.c  test_inverse_trig_aliases.c  test_me_jit_glue_smoke.js  test_mixed_types.c  test_nd.c  test_numpy_conversion.c  test_numpy_functions.c  test_operators.c  test_power_operator.c  test_print.c  test_reductions.c  test_regressions.c  test_simd_math.c  test_string_ops.c  test_threadsafe_chunk.c  test_trig.c  test_two_param_functions.c
(+7 files in other folders)
