file(GLOB MINIEXPR_BENCH_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
if(WIN32)
  # These benchmarks rely on pthreads/time APIs not available on Windows CI.
  list(FILTER MINIEXPR_BENCH_SOURCES EXCLUDE REGEX "benchmark_blocksize\\.c$")
  list(FILTER MINIEXPR_BENCH_SOURCES EXCLUDE REGEX "benchmark_blocksize_threads\\.c$")
  list(FILTER MINIEXPR_BENCH_SOURCES EXCLUDE REGEX "benchmark_chunked\\.c$")
  list(FILTER MINIEXPR_BENCH_SOURCES EXCLUDE REGEX "benchmark_reductions\\.c$")
  list(FILTER MINIEXPR_BENCH_SOURCES EXCLUDE REGEX "benchmark_reductions_threads\\.c$")
  list(FILTER MINIEXPR_BENCH_SOURCES EXCLUDE REGEX "benchmark_sincos\\.c$")
  list(FILTER MINIEXPR_BENCH_SOURCES EXCLUDE REGEX "benchmark_sincos_threads\\.c$")
  list(FILTER MINIEXPR_BENCH_SOURCES EXCLUDE REGEX "benchmark_threadsafe\\.c$")
endif()

foreach(bench_src IN LISTS MINIEXPR_BENCH_SOURCES)
  get_filename_component(bench_name "${bench_src}" NAME_WE)
  add_executable("${bench_name}" "${bench_src}")
  target_link_libraries("${bench_name}" PRIVATE ${MINIEXPR_DEFAULT_LIB} ${MINIEXPR_THREADS_LIB})
  if(NOT WIN32)
    target_link_libraries("${bench_name}" PRIVATE m)
  endif()
endforeach()
