file(GLOB MINIEXPR_TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
list(FILTER MINIEXPR_TEST_SOURCES EXCLUDE REGEX "jit_kernel_stub\\.c$")
if(EMSCRIPTEN)
  add_library(me_jit_test_stub STATIC "${CMAKE_CURRENT_SOURCE_DIR}/jit_kernel_stub.c")
else()
  add_library(me_jit_test_stub SHARED "${CMAKE_CURRENT_SOURCE_DIR}/jit_kernel_stub.c")
endif()
target_compile_features(me_jit_test_stub PUBLIC c_std_99)
if(NOT WIN32)
  target_link_libraries(me_jit_test_stub PRIVATE m)
endif()
if(WIN32)
  list(FILTER MINIEXPR_TEST_SOURCES EXCLUDE REGEX "test_threadsafe_chunk\\.c$")
  # MSVC/clang-cl complex literal handling breaks this test; skip on Windows.
  list(FILTER MINIEXPR_TEST_SOURCES EXCLUDE REGEX "test_regressions\\.c$")
endif()
if(EMSCRIPTEN)
  # These rely on host runtime features that are not available in plain wasm32 CI.
  list(FILTER MINIEXPR_TEST_SOURCES EXCLUDE REGEX "test_threadsafe_chunk\\.c$")
  list(FILTER MINIEXPR_TEST_SOURCES EXCLUDE REGEX "test_dsl_jit_codegen\\.c$")
  list(FILTER MINIEXPR_TEST_SOURCES EXCLUDE REGEX "test_dsl_jit_runtime_cache\\.c$")
endif()

foreach(test_src IN LISTS MINIEXPR_TEST_SOURCES)
  get_filename_component(test_name "${test_src}" NAME_WE)
  add_executable("${test_name}" "${test_src}")
  target_compile_definitions("${test_name}" PRIVATE MINIEXPR_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
  target_compile_definitions("${test_name}"
    PRIVATE ME_DSL_JIT_TEST_STUB_SO_PATH="$<TARGET_FILE:me_jit_test_stub>")
  target_link_libraries("${test_name}" PRIVATE ${MINIEXPR_DEFAULT_LIB} ${MINIEXPR_THREADS_LIB})
  if(NOT WIN32)
    target_link_libraries("${test_name}" PRIVATE m)
  endif()
  if(test_name STREQUAL "test_dsl_jit_runtime_cache")
    add_dependencies("${test_name}" me_jit_test_stub)
  endif()
  add_test(NAME "${test_name}" COMMAND "${test_name}")
endforeach()
